# popcorn-client

./: .astroignore  .gitignore  BUILD_INSTRUCTIONS.md  BUILD_TAURI_CHECKLIST.md  BUILD_TAURI_STATUS.md  CHANGELOG-CLIENT-ONLY.md  Dockerfile  MIGRATION_DB.md  MODIFS_DESIGN_FOCUS_DEPUIS_STREAMING.md  README.md  STATUS_ANDROID.md  VERSION.json  astro.config.mjs  astro.config.tauri.mjs  astro.config.webos.mjs  build_log.txt  clean-workflow-runs.ps1  com.popcorn.client.webos_1.0.26_all.ipk  com.popcorn.test.webos_1.0.0_all.ipk  create-keystore.ps1  encode-keystore.ps1  keystore-base64.txt  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vitest.config.ts
.astro/: data-store.json  settings.json
.jules/: sentinel.md
doc/: BUILD_ANDROID.md  BUILD_TAURI_CHECKLIST.md  BUILD_TAURI_STATUS.md  CONFIGURATION_ANDROID_BACKEND.md  CONFIGURER_ANDROID.md  E2E_PLAYBACK_MATRIX.md  INSTALLATION_ANDROID.md  INSTALLER_NDK_ET_TOOLS.md  LUCIE_FINAL_STATUS.md  LUCIE_PLAYER_INTEGRATION.md  LUCIE_SUMMARY.md  LUCIE_UPDATE_FINAL.md  QUICK_START_DESKTOP.md  README-DESKTOP.md  STATUS.md  TROUBLESHOOTING_APK.md  TROUBLESHOOTING_DOCKER_RUNNER_DNS.md  VEO_3.1_PROMPT_POPCORN_INTRO.md  VERIFICATION_PRODUCTION_ANDROID.md  VERSIONING.md
docker/: Dockerfile  docker-entrypoint.sh  nginx.conf
docs/: ANDROID_SIGNING.md  AUDIT_NAVIGATION_TELECOMMANDE_PLAYER.md  BUILD_ANDROID.md  BUILD_IOS.md  BUILD_ISSUE.md  BUILD_TAURI_CHECKLIST.md  COMMUNICATION_ANDROID.md  DB_USAGE_ANALYSIS.md  DESIGN_SYSTEM.md  GITHUB_ACTIONS_APK_PUBLISH.md  GITHUB_ACTIONS_ARTIFACTS_QUOTA.md  GITHUB_ACTIONS_SIGNING.md  LUCIE_BUGFIX_URL_DUPLICATION.md  LUCIE_BUGFIX_URL_VALIDATION.md  LUCIE_EXAMPLE.md  LUCIE_FINAL_STATUS.md  LUCIE_SETTINGS_INTEGRATION.md  LUCIE_SUMMARY.md  LUCIE_UPDATE_FINAL.md  MIGRATION_DB.md  PLAN_MODE_DEMO_VALIDATION_STORES.md  PLAY_STORE_PUBLICATION.md  README-ENV.md  README.md  SYNC_TORRENT_LOGIC.md  TROUBLESHOOTING_APK_INSTALL.md  VERSION_SYSTEM.md  WEBOS_QA_LG_CORRECTIONS.md
docs-backup-temp/: index.astro
public/: VERSION.json  sw.js
scripts/: android-smoke-test.ps1  apply-signing-config-tv.py  apply-signing-config.py  audit-android-complet.ps1  build-and-test-complete.ps1  build-android-all.ps1  build-android.ps1  build-apk.ps1  build-desktop.ps1  build-tauri.js  check-android.ps1  check-setup.ps1  cleanup-artifacts.ps1  cleanup-artifacts.sh  copy-version.js  create-feature-graphic.mjs  create-invite.ps1  create-keystore.ps1  create-playstore-screenshots.mjs  create-tv-banner.js  dev-desktop.ps1  diagnose-apk.ps1  encode-keystore.ps1  fetch-jackett-indexer-ids.mjs  find-android-tools.ps1  fix-all-json-blocks.ps1  fix-android-communication.ps1  fix-apk-signature.ps1  fix-docs-syntax.js  fix-file-limit-windows.ps1  fix-json-in-code.js  init-test-db.ps1  make-square-icon.js  migrate-api-routes.ps1  migrate-db-to-server.ts  patch-android-manifest.js  prepare-tauri-build.ps1  rename-apk.ps1  resize-logo-playstore.mjs  resize-logo-playstore.ps1  (+12 more)
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.android.mobile.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/drawable/: ic_launcher_background.xml
src-tauri/permissions/: custom-commands.toml
src-tauri/src/: lib.rs  main.rs
webos/: 403.html  404.html  500.html  LG_SELLER_LOUNGE_RU_DESCRIPTIONS.md  README.md  UX_Scenario_Popcorn_WebOS.html  appinfo.json  dashboard.html  demandes.html  (+22 more)
webos-test/: appinfo.json  index.html
(+658 files in other folders)
